--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
  <div class="hero d-flex align-items-center justify-content-center" style="background-color: #333333;">
         <div class="container text-center">
-            <h1 class="display-4 text-light">제목</h1>
-            <p class="lead text-light">소제목</p>
+            <h1 class="display-4 text-light"> Paradox Parade : Brilliant Blessing </h1>
+            <p class="lead text-light"> The Mythsailors </p>
         </div>
     </div>
     </div>
@@ -41,9 +41,9 @@
             <div class="card">
                 <img src="https://source.unsplash.com/1600x900/?nature" class="card-img-top" alt="bless">
                 <div class="card-body">
-                    <h5 class="card-title">우주 사진</h5>
+                    <h5 class="card-title"> 프공방 </h5>
                     <h6 class="card-subtitle mb-2 text-muted">1</h6>
-                    <p class="card-text">1.</p>
+                    <p class="card-text"> 프공방 링크로 자동 이동합니다. </p>
                 </div>
             </div>
         </div>
@@ -51,9 +51,9 @@
             <div class="card">
                 <img src="https://source.unsplash.com/1600x900/?city" class="card-img-top" alt="paradox">
                 <div class="card-body">
-                    <h5 class="card-title">우주 사진</h5>
+                    <h5 class="card-title">세계관</h5>
                     <h6 class="card-subtitle mb-2 text-muted">1</h6>
-                    <p class="card-text">1.</p>
+                    <p class="card-text">세계관 위키 페이지로 이동합니다.</p>
                 </div>
             </div>
         </div>
@@ -61,9 +61,9 @@
             <div class="card">
                 <img src="https://source.unsplash.com/1600x900/?beach" class="card-img-top" alt="space">
                 <div class="card-body">
-                    <h5 class="card-title">우주 사진</h5>
+                    <h5 class="card-title"> 티저 </h5>
                     <h6 class="card-subtitle mb-2 text-muted">1</h6>
-                    <p class="card-text">1</p>
+                    <p class="card-text"> 티저 상영 사이트로 이동합니다. </p>
                 </div>
             </div>
         </div>
